# ninolex-gh

./: .gitignore  ANNOUNCEMENTS.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN_NOTES.md  GITHUB_ISSUES_SEED.md  IPA_GUIDE.md  LICENSE  MANIFEST.in  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  core_terms.csv  pyproject.toml
.github/workflows/: ci.yml
data/core/: core_terms.csv
data/education/: shs.csv
data/people/: complex_names.csv  public_figures.csv
data/places/: constituencies.csv  regions.csv  towns.csv
data/sports/: football_clubs.csv
exports/: ninolex_gh_core.pls
src/ninolex_gh/: __init__.py  core.py  exceptions.py
src/ninolex_gh.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ninolex_gh/data/: __init__.py
tests/: validate_ipa.py
tools/: coverage_check.py  golden_100_template.txt  smoke_test_package.py
